fix video preview stretching

--- a/client/src/containers/artist/artist.scss
+++ b/client/src/containers/artist/artist.scss
@@ -278,6 +278,7 @@
   }
 
   &__message-container {
+    max-width: 335px;
     display: flex;
     align-items: center;
     width: 90%;
